<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:background="@drawable/rv_list_shape"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="12dp">

    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:text="@string/indicador_nome"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary_light"/>

    <TextView
        android:id="@+id/tv_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/indicador_valor"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary_light"/>

    <TextView
        android:id="@+id/tv_parametro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicador_parametro"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>