<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.zenith.oceantechapp.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient_primary_dark_to_light">


        <LinearLayout
            android:id="@+id/linear_banner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center_vertical"

            android:paddingStart="@dimen/fragment_horizontal_margin"

            app:layout_constraintBottom_toTopOf="@id/guideline_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ola"
                android:textColor="@color/white"
                android:textSize="48sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"

            app:layout_constraintGuide_percent="0.3"/>

        <LinearLayout
            android:id="@+id/linear_body"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"

            app:layout_constraintTop_toBottomOf="@id/guideline_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


            <Button
                android:id="@+id/button_portos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="30dp"
                android:layout_marginBottom="16dp"
                android:gravity="left"
                android:text="@string/portos"
                android:textSize="24sp"
                android:textColor="@color/white"
                app:icon="@drawable/ic_baseline_directions_boat"
                android:backgroundTint="@color/secondary" />

            <Button
                android:id="@+id/button_integrantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingVertical="30dp"
                android:text="@string/integrantes"
                android:textSize="24sp"
                android:textColor="@color/white"
                app:icon="@drawable/ic_baseline_group"
                android:backgroundTint="@color/secondary" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>